[package]
name = "degit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features=["cargo"] }
# for better performance use features = ["zlib-ng"], default-features = false
flate2 = "1.0.25"
indicatif = "0.17.3"
regex = "1.7.1"
reqwest ={ version = "0.11.14", features = ["blocking"] }
tar = "0.4.38"
tokio = { version = "1.25.0", features = ["full"] }
